--- a/src/app/features/home/components/projects/projects.component.html
+++ b/src/app/features/home/components/projects/projects.component.html
@@ -11,7 +11,7 @@
           <img [ngSrc]="project.imageUrl" fill class="border-slate-600 border-2 rounded-md"/>
         </div>
         <div>
-          <p class="text-white text-lg mb-2">{{ project.title }}</p>
+          <p class="text-sm uppercase tracking-widest pb-2 text-white">{{ project.title }}</p>
           <p class="text-sm">{{ project.description }}</p>
           <div class="relative mt-5 min-w-60 max-w-60 min-h-32 max-h-32 md:hidden">
             <img [ngSrc]="project.imageUrl" fill class="border-slate-600 border-2 rounded-md"/>
