--- a/src/app/features/home/components/projects/projects.component.html
+++ b/src/app/features/home/components/projects/projects.component.html
@@ -7,8 +7,8 @@
                   lg:-inset-x-6 lg:block lg:group-hover:bg-slate-500/10 lg:group-hover:border-t lg:group-hover:drop-shadow-lg">
       </div>
       <div class="relative flex gap-10 items-center">
-        <div class="hidden relative min-w-40 max-w-40 min-h-24 max-h-24 md:block">
-          <img [ngSrc]="project.imageUrl" fill class="border-slate-600 border-2 rounded-md"/>
+        <div class="hidden relative group-hover:transform min-w-40 max-w-40 min-h-24 max-h-24 md:block">
+          <img [ngSrc]="project.imageUrl" fill class="border-slate-600 border-2 rounded-md transition-all duration-500 group-hover:scale-110"/>
         </div>
         <div>
           <p class="text-sm uppercase tracking-widest pb-2 text-white">{{ project.title }}</p>
