--- a/src/app/features/home/components/experience/experience.component.html
+++ b/src/app/features/home/components/experience/experience.component.html
@@ -9,14 +9,14 @@
         </a>
         <div class="flex flex-col md:flex-row md:gap-10">
           <div class="flex gap-2 items-center md:items-start md:w-1/4">
-            <a class="md:hidden text-white text-nowrap font-semibold" [href]="job.employer.url" target="_blank">
-              {{ job.employer.name.toUpperCase() }}
+            <a class="md:hidden text-sm tracking-wider uppercase text-white text-nowrap font-semibold" [href]="job.employer.url" target="_blank">
+              {{ job.employer.name }}
               <i class="inline-block lg:hidden group-hover/item:inline-block lg:ml-2 w-3"><tr-arrow-right-icon /></i>
             </a>
             <p class="text-xs font-normal tracking-widest lg:tracking-wider lg:font-medium sm:mt-1 text-nowrap">{{ job.timeline.text }}</p>
           </div>
           <div class="flex-1">
-            <div class="leading-snug pb-2 text-sm tracking-widest uppercase font-normal text-white sm:py-2 md:pt-0 ">
+            <div class="leading-snug pb-2 text-sm tracking-wider font-semibold text-white sm:py-2 md:pt-0 ">
               <a class="hidden group/link md:inline text-nowrap hover:text-secondary lg:group-hover/item:text-secondary" [href]="job.employer.url" target="_blank">
                 {{ job.title }} · {{ job.employer.name.toUpperCase() }}
                 <i class="inline-block transition-all duration-300 w-3
@@ -32,7 +32,7 @@
               }
             </div>
   
-            <p class="leading-tight">{{ job.employer.description }}</p>
+            <p class="leading-tight text-sm">{{ job.employer.description }}</p>
   
             <p class="my-4 font-light text-sm">{{ job.responsibilities }}</p>
   
