Add Goodreads and update About me section

--- a/src/app/pages/home/components/about/about.component.html
+++ b/src/app/pages/home/components/about/about.component.html
@@ -1,14 +1,70 @@
 <tr-section-heading>About</tr-section-heading>
 <section class="text-light_grey">
   <p>
-    I began my software development journey in 2011, when I took IT in high school. I fell in love with programming immediately. Fast-forward to today and I've worked on many different software
-    projects, for companies in various industries, such as <a class="text-white hover:text-secondary" href="https://www.tracker.co.za" target="_blank">vehicle-tracking</a>,
-    <a class="text-white hover:text-secondary" href="https://uk.apleona.com" target="_blank">facilities
-      management</a> & <a class="text-white hover:text-secondary" href="https://www.dvt.co.za" target="_blank">software solutions.</a>
+    I began my software development journey in 2011, when I took IT in high
+    school. I fell in love with programming immediately. Fast-forward to today
+    and I've worked on many different software projects, for companies in
+    various industries, such as
+    <a
+      class="text-white hover:text-secondary"
+      href="https://www.tracker.co.za"
+      target="_blank"
+      >vehicle-tracking</a
+    >,
+    <a
+      class="text-white hover:text-secondary"
+      href="https://uk.apleona.com"
+      target="_blank"
+      >facilities management</a
+    >
+    &
+    <a
+      class="text-white hover:text-secondary"
+      href="https://www.dvt.co.za"
+      target="_blank"
+      >software solutions.</a
+    >
   </p>
-  <br>
-  <p>My latest interest is <a class="text-white hover:text-secondary" href="https://aws.amazon.com" target="_blank">AWS</a> - achieving <a class="text-white hover:text-secondary" href="https://aws.amazon.com/certification/" target="_blank">certifications</a> and building things using their products & services.</p>
-  <br>
-  <p>When I'm not at my computer you can find me <a class="text-white hover:text-secondary" href="https://www.strava.com/athletes/113476131" target="_blank">trying to stay fit</a> or <a class="text-white hover:text-secondary" href="https://app.playtomic.io/profile/user/3559869?utm_source=app_ios&utm_medium=share" target="_blank">playing padel with friends</a>.</p>
+  <br />
+  <p>
+    My latest interest in the tech world is
+    <a
+      class="text-white hover:text-secondary"
+      href="https://aws.amazon.com"
+      target="_blank"
+      >AWS</a
+    >
+    - doing some of their
+    <a
+      class="text-white hover:text-secondary"
+      href="https://aws.amazon.com/certification/"
+      target="_blank"
+      >certifications</a
+    >
+    and building things with the large variety of products & services on offer.
+  </p>
+  <br />
+  <p>
+    When I'm not at my computer you can find me
+    <a
+      class="text-white hover:text-secondary"
+      href="https://www.strava.com/athletes/113476131"
+      target="_blank"
+      >trying to stay fit</a
+    >,
+    <a
+      class="text-white hover:text-secondary"
+      href="https://app.playtomic.io/profile/user/3559869?utm_source=app_ios&utm_medium=share"
+      target="_blank"
+      >playing padel with friends</a
+    >
+    or
+    <a
+      class="text-white hover:text-secondary"
+      href="https://www.goodreads.com/user/show/181336386-taylor-ray"
+      target="_blank"
+      >reading</a
+    >
+    with a cup of tea in hand.
+  </p>
 </section>
-
