--- a/src/app/pages/home/components/social/social.component.html
+++ b/src/app/pages/home/components/social/social.component.html
@@ -1,8 +1,23 @@
 <footer class="flex gap-4 text-white">
-  <a class="opacity-70 hover:opacity-100" href="https://linkedin.com/in/traysoftware/" target="_blank">
-    <tr-linkedin-icon/>
+  <a
+    class="opacity-70 hover:opacity-100"
+    href="https://linkedin.com/in/traysoftware/"
+    target="_blank"
+  >
+    <tr-linkedin-icon />
   </a>
-  <a class="opacity-70 hover:opacity-100" href="https://github.com/teeray10" target="_blank">
-    <tr-github-icon/>
+  <a
+    class="opacity-70 hover:opacity-100"
+    href="https://github.com/teeray10"
+    target="_blank"
+  >
+    <tr-github-icon />
+  </a>
+  <a
+    class="opacity-70 hover:opacity-100"
+    href="https://www.goodreads.com/user/show/181336386-taylor-ray"
+    target="_blank"
+  >
+    <tr-goodreads-icon />
   </a>
 </footer>
