--- a/src/app/pages/home/components/about/about.component.html
+++ b/src/app/pages/home/components/about/about.component.html
@@ -56,15 +56,15 @@
       class="text-white hover:text-secondary"
       href="https://app.playtomic.io/profile/user/3559869?utm_source=app_ios&utm_medium=share"
       target="_blank"
-      >playing padel with friends</a
+      >playing padel</a
     >
-    or
+    with friends or
     <a
       class="text-white hover:text-secondary"
       href="https://www.goodreads.com/user/show/181336386-taylor-ray"
       target="_blank"
-      >reading</a
+      >reading with a cup of tea</a
     >
-    with a cup of tea in hand.
+    in hand.
   </p>
 </section>
