--- a/src/app/pages/home/components/about/about.component.html
+++ b/src/app/pages/home/components/about/about.component.html
@@ -4,7 +4,13 @@
     I began my software development journey in 2011, when I took IT in high
     school. I fell in love with programming immediately. Fast-forward to today
     and I've worked on many different software projects, for companies in
-    various industries, such as
+    various industries such as
+    <a
+      class="text-white hover:text-secondary"
+      href="https://www.momentum.co.za/"
+      target="_blank"
+      >insurance</a
+    >,
     <a
       class="text-white hover:text-secondary"
       href="https://www.tracker.co.za"
@@ -22,7 +28,7 @@
       class="text-white hover:text-secondary"
       href="https://www.dvt.co.za"
       target="_blank"
-      >software solutions.</a
+      >software engineering.</a
     >
   </p>
   <br />
@@ -41,7 +47,7 @@
       target="_blank"
       >certifications</a
     >
-    and building things with the large variety of products & services on offer.
+    and building things with the wide variety of products & services on offer.
   </p>
   <br />
   <p>
