--- a/src/app/pages/home/components/sidebar/sidebar.component.html
+++ b/src/app/pages/home/components/sidebar/sidebar.component.html
@@ -1,10 +1,18 @@
-<aside class="flex flex-col justify-center items-center w-full h-screen min-h-screen max-h-screen top-0 gap-20
-              lg:sticky lg:items-start lg:gap-10 lg:py-60 lg:w-fit">
+<aside
+  class="flex flex-col justify-center items-center w-full h-screen min-h-screen max-h-screen top-0 gap-20 lg:sticky lg:items-start lg:gap-10 lg:py-60 lg:w-fit"
+>
   <header class="flex flex-col gap-3 w-fit lg:h-fit text-center lg:text-left">
-    <h1 class="text-white text-5xl lg:text-7xl text-nowrap font-semibold">Taylor Ray</h1>
-    <h2 class="text-xl text-white/90 text-nowrap lg:text-2xl">Frontend Web Developer</h2>
-    <h3 class="font-light max-w-[400px] lg:max-w-[350px] leading-snug">I build functional and creative web applications that solve real world problems</h3>
+    <h1 class="text-white text-5xl lg:text-7xl text-nowrap font-semibold">
+      Taylor Ray
+    </h1>
+    <h2 class="text-xl text-white/90 text-nowrap lg:text-2xl">
+      Front-End Software Developer
+    </h2>
+    <h3 class="font-light max-w-[400px] lg:max-w-[350px] leading-snug">
+      I build functional and creative web applications that solve real world
+      problems
+    </h3>
   </header>
-  <tr-nav class="hidden lg:block text-primary lg:relative lg:grow"/>
-  <tr-social class="text-primary"/>
+  <tr-nav class="hidden lg:block text-primary lg:relative lg:grow" />
+  <tr-social class="text-primary" />
 </aside>
